# sample-bulletin-board-forum

./: .env.example  .gitignore  README.md  README.txt  manage.py  pyproject.toml
bulletinboard/: asgi.py  settings.py  urls.py  wsgi.py
bulletinboard/accounts/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
bulletinboard/accounts/migrations/: 0001_initial.py  0002_user_is_administrator.py  0003_alter_user_about_myself_alter_user_date_of_birth_and_more.py  0004_alter_user_gender.py  0005_user_avatar_url.py  0006_alter_user_managers.py  0007_alter_user_managers.py  0008_remove_user_is_poster.py
bulletinboard/contents/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
bulletinboard/contents/migrations/: 0001_initial.py  0002_post_thread.py  0003_alter_post_author_alter_thread_board.py  0004_alter_post_options_alter_post_author.py  0005_alter_post_author.py  0006_alter_post_author.py  0007_thread_author_alter_post_author.py  0008_post_author_username_thread_author_username.py  0009_alter_post_options_alter_thread_options_and_more.py  0010_alter_thread_options_thread_last_replied_and_more.py  0011_alter_thread_last_replied_and_more.py  0012_alter_thread_last_replied.py  0013_alter_post_options.py  0014_alter_board_options_alter_thread_options_and_more.py  0015_alter_thread_options_remove_thread_date_created_and_more.py  0016_alter_thread_options_remove_thread_last_replied_and_more.py  (+3 more)
frontend/: .env.example  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
(+58 files in other folders)
