[tool.poetry]
name = "bulletin-board-system"
version = "0.1.0"
description = ""
authors = ["Sam Gabo <sam.gabo@bld.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
black = "^22.8.0"
django-rest-knox = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
